# Qr-code-gratuit-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reproduce_issue.py  reproduce_svg.py  requirements.txt  test_pdf.py  test_upload.py
scripts/: run-dev.ps1
specs/001-windsurf-app/: data-model.md  quickstart.md  research.md  tasks.md
src/: main.py
src/api/endpoints/: auth.py  qrcode.py  upload.py
src/core/: config.py  rate_limiter.py  security.py
src/db/: __init__.py  database.py  init_db.py  models.py
src/schemas/: auth.py  qrcode.py
src/services/: auth_service.py  qrcode_service.py
tests/: conftest.py
tests/integration/: test_auth_flow.py
tests/unit/: test_qrcode_service.py
windsurf/: Dockerfile  README.md  database.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml  reproduce_issue.py  reproduce_svg.py  requirements.txt  test_pdf.py  test_upload.py
windsurf/scripts/: run-dev.ps1
windsurf/specs/001-windsurf-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
windsurf/src/: main.py
windsurf/src/api/endpoints/: auth.py  qrcode.py  upload.py
windsurf/src/core/: config.py  rate_limiter.py  security.py
windsurf/src/db/: __init__.py  database.py  init_db.py  models.py
windsurf/src/schemas/: auth.py  qrcode.py  token.py
windsurf/src/services/: auth_service.py  qrcode_service.py
windsurf/tests/: conftest.py
windsurf/tests/integration/: test_auth_flow.py
windsurf/tests/unit/: test_qrcode_service.py
